--- a/package.json
+++ b/package.json
@@ -24,22 +24,13 @@
     }
   ],
   "dependencies": {
-    "qs": "^1.2.2"
+    "send": ">=0.7.3"
   },
-  "devDependencies": {
-    "grunt-contrib-jshint": "^0.8.0",
-    "grunt": "~0.4.0",
-    "chai": "~1.4.2",
-    "mocha": "~1.8.1",
-    "sinon": "~1.8.2",
-    "sinon-chai": "~2.5.0",
-    "proxyquire": "~0.5.2",
-    "jshint-globals": "~0.1.0"
-  },
-  "scripts": {
-    "test": "./bin/test"
+  "peerDependencies": {
+    "grunt": ">=0.4.1"
   },
   "keywords": [
-    "modrewrite"
+    "connect",
+    "combine"
   ]
 }
